--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://unpkg.com/jspdf-autotable@3.1.4/dist/jspdf.plugin.autotable.js"></script>
   </head>
   <body style="font-family: 'Sarabun', sans-serif;">
-    <div class="col-sm-9 col-sm-offset-4 tablePanel">
+    <div class="col-sm-9  tablePanel">
       <div class="form-group m-b-10" style="margin-top:20px;">
         <label class="control-label" style="font-weight:bold">
           ชื่อหน่วยงาน :
